--- a/index.html
+++ b/index.html
@@ -2,53 +2,6 @@
 <html lang="en">
 <head>
 <style type="text/css">
-  .wrapper {
-    position: relative;
-  }
-  .wrapper, body, html {
-    min-height: 100%;
-  }
-  body {
-      margin: 0;
-      font-family: "Source Sans Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-      font-size: 1rem;
-      font-weight: 400;
-      line-height: 1.5;
-      color: #212529;
-      text-align: left;
-      background-color: #fff;
-  }
-  .wrapper .content-wrapper {
-      min-height: calc(100vh-calc(3.5rem+ 1px) - calc(3.5rem+ 1px));
-  }
-  .content-wrapper {
-      height: 100%;
-  }
-  .content-wrapper {
-      background-color: #f4f6f9;
-  }
-  *, ::after, ::before {
-      box-sizing: border-box;
-  }
-  body {
-      display: block;
-      margin: 8px;
-  }
-  div {
-    display: block;
-  }
-  html {
-      font-family: sans-serif;
-      line-height: 1.15;
-      -webkit-text-size-adjust: 100%;
-      -webkit-tap-highlight-color: transparent;
-  }
-  *, ::after, ::before {
-      box-sizing: border-box;
-  }
-  *, ::after, ::before {
-      box-sizing: border-box;
-  }
   @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
   .p-head {
     text-align: center;
@@ -87,35 +40,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Anniversary</title>
-
-  <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <!-- Tempusdominus Bootstrap 4 -->
-  <link rel="stylesheet" href="plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
-  <!-- iCheck -->
-  <link rel="stylesheet" href="plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-  <!-- JQVMap -->
-  <link rel="stylesheet" href="plugins/jqvmap/jqvmap.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="dist/css/adminlte.min.css">
-  <!-- overlayScrollbars -->
-  <link rel="stylesheet" href="plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
-  <!-- Daterange picker -->
-  <link rel="stylesheet" href="plugins/daterangepicker/daterangepicker.css">
-  <!-- summernote -->
-  <link rel="stylesheet" href="plugins/summernote/summernote-bs4.min.css">
-  <script src="sweet/sweetalert2.all.min.js"></script>
-  <link rel="stylesheet" href="plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css">
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
-<body class="hold-transition sidebar-mini layout-fixed" style="margin: 0;">
+<body class="hold-transition sidebar-mini layout-fixed" style="margin: 0; background-image: url(dist/img/bg-inti.jpg); background-size: cover; height: 100%;">
 <div class="wrapper" style="margin: 0;">
 
-  <div class="content-wrapper" style="margin: 0; background-image: url(dist/img/bg-inti.jpg); background-size: cover; width: 100%; padding: 30px; background-position: center;">
+  <div class="content-wrapper" style="">
 
     <div class="parent-div">
       <div class="example-div">
@@ -138,38 +69,6 @@
   </div>
 
 </div>
-
-<script src="plugins/jquery/jquery.min.js"></script>
-<script src="plugins/jquery-ui/jquery-ui.min.js"></script>
-<!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-<script>
-  $.widget.bridge('uibutton', $.ui.button)
-</script>
-<!-- Bootstrap 4 -->
-<script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-<!-- ChartJS -->
-<script src="plugins/chart.js/Chart.min.js"></script>
-<!-- Sparkline -->
-<script src="plugins/sparklines/sparkline.js"></script>
-<!-- JQVMap -->
-<script src="plugins/jqvmap/jquery.vmap.min.js"></script>
-<script src="plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-<!-- jQuery Knob Chart -->
-<script src="plugins/jquery-knob/jquery.knob.min.js"></script>
-<!-- daterangepicker -->
-<script src="plugins/moment/moment.min.js"></script>
-<script src="plugins/daterangepicker/daterangepicker.js"></script>
-<!-- Tempusdominus Bootstrap 4 -->
-<script src="plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-<!-- Summernote -->
-<script src="plugins/summernote/summernote-bs4.min.js"></script>
-<!-- overlayScrollbars -->
-<script src="plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-<!-- AdminLTE App -->
-<script src="dist/js/adminlte.js"></script>
-<script src="dist/js/pages/dashboard.js"></script>
-<script src="plugins/sweetalert2/sweetalert2.min.js"></script>
-<script src="sweet/sweetalert2.all.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
