--- a/index2.html
+++ b/index2.html
@@ -43,7 +43,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
-<body class="hold-transition sidebar-mini layout-fixed" style="margin: 0;">
+<body class="hold-transition sidebar-mini layout-fixed" style="margin: 0; background-image: url(dist/img/bg-inti.jpg); background-size: cover; height: 100%;">
 <div class="wrapper" style="margin: 0;">
 
 <?php
@@ -84,7 +84,7 @@
   }
 ?>
 
-  <div class="content-wrapper" style="margin: 0; background-image: url(dist/img/bg-inti.jpg); background-size: cover; width: 100%; padding: 30px; background-position: center;">
+  <div class="content-wrapper" style="">
 
     <div class="parent-div">
       <div class="example-div">
