--- a/games1.html
+++ b/games1.html
@@ -61,7 +61,7 @@
 
     <div class="parent-div">
       <div class="example-div">
-        <form method="post" action="utama.php?s=0&&b=1">
+        <form method="post" action="utama.html?s=0&&b=1">
           <div class="head-card">SIAPAKAH YG SUKA MENGAMBUL?</div>
           <div class="pin-form">
             <!-- <button type="submit" class="btn btn-info" style="margin: 0 10px;" id="budi" disabled="">BUDI</input> -->
@@ -73,6 +73,7 @@
         </form>
       </div>
     </div>
+    
   </div>
 
 </div>
