--- a/index2.html
+++ b/index2.html
@@ -77,7 +77,7 @@
           'OK'
         }).then ((result) => {
           if (result.isConfirmed) {
-            location.href = 'games1.php';
+            location.href = 'games1.html';
         }
       })
     </script>";
@@ -88,7 +88,7 @@
 
     <div class="parent-div">
       <div class="example-div">
-        <form method="post" action="index2.php">
+        <form method="post" action="index2.html">
           <div class="head-card">Harap Masukan PIN</div>
           <div class="pin-form">
             <input type="text" name="1" min="0" maxlength="1" style="font-size: 30px;text-align: center;width: 50px;border-radius: 5px;height: 50px;"></input>
